# pennytune

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.zh.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
src/pennytune/: __init__.py  __main__.py  banner.py  cache.py  cli.py  concurrency.py  config.py  disclaimer.py  exit_codes.py  freshness.py  output.py  paths.py  presets.py  profiles.py  ratelimit.py  scan.py  scoring.py
src/pennytune/features/: __init__.py  delisting.py  dilution.py  events.py  fundamentals.py  halts.py  insider.py  manipulation.py  news.py  quant_scores.py  short_interest.py  universe.py  watchlist.py
src/pennytune/providers/: __init__.py  base.py  http.py
tests/: test_cache.py  test_cli.py  test_concurrency.py  test_config.py  test_config_cli.py  test_delisting.py  test_dilution.py  test_e2e_flows.py  test_events.py  test_freshness.py  test_fundamentals.py  test_halts.py  test_imports.py  test_insider.py  test_manipulation.py  test_news.py  test_output.py  test_packaging.py  test_paths.py  test_presets.py  test_profiles.py  test_providers.py  test_quant_scores.py  test_ratelimit.py  test_scan.py  test_scoring.py  test_security_invariants.py  test_short_interest.py  test_universe.py  test_watchlist.py
